k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-cloud-infra-demo
  labels:
    name: prod-cloud-infra-demo
    managed-by: terraform
